--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE Td5.html>
+<html>
+<head>
+    <meta charset=utf-8 >
+    <title>
+       Ankama 
+    </title>
+    
+</head>
+<body>
+    Ankama est une société française spécialisée dans le domaine de la création numérique et artistique.
 
+</body>
