--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset=utf-8 > 
-        <link rel="icon"  size="16x16" type="image/x-icon"  href="/favicon.ico">
+        <link rel="icon"  size="16x16" type="image/x-icon"  href="favicon.ico">
         <title>
         Ankama
         
