--- a/SAE 06/SAE_acceuil.html
+++ b/SAE 06/SAE_acceuil.html
@@ -15,7 +15,7 @@
             font-size: 140px ;
             color: rgb(214, 55, 55) ;
             text-align: center ;
-            padding: 0px 0px ;
+            padding: 5% 0px 10px 0px
             width: 100% ;
             
         }
