--- a/zonning.html
+++ b/zonning.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <title></title>
-    <meta charset="utf-8">
 
+    <meta charset="utf-8">
+    <link rel = "icon" href = "Ankama logo.png">
+    <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
     <style>
         .center{display : flex; justify-content: center;}
