--- a/zonning.html
+++ b/zonning.html
@@ -4,8 +4,7 @@
 
     <meta charset="utf-8">
     <link rel = "icon" href = "Ankama logo.png">
-    <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="https://cdaviden-iut90.github.io/Ankama/bootstrap/css/bootstrap.css" rel="stylesheet">
     <style>
         .center{display : flex; justify-content: center;}
 
