--- a/zonning.html
+++ b/zonning.html
@@ -3,8 +3,8 @@
 <head>
 
     <meta charset="utf-8">
-    <link rel = "icon" href = "Ankama logo.png">
-    <link href="https://cdaviden-iut90.github.io/Ankama/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link rel = "icon" href = "logo.png">
+    <link href="SAE 06/bootstrap/css/bootstrap.css" rel="stylesheet">
     <style>
         .center{display : flex; justify-content: center;}
 
