--- a/zonning.html
+++ b/zonning.html
@@ -3,7 +3,7 @@
 <head>
 
     <meta charset="utf-8">
-    <link rel = "icon" href = "logo.png">
+    <link rel = "icon" href = "SAE 06/Ankama logo.png">
     <link href="SAE 06/bootstrap/css/bootstrap.css" rel="stylesheet">
     <style>
         .center{display : flex; justify-content: center;}
