--- a/zonning.html
+++ b/zonning.html
@@ -67,7 +67,7 @@ a:hover {
 </head>
 <body>
     <nav class="navigation">
-		<a href="https://cdaviden-iut90.github.io/Ankama/SAE%2006/SAE_acceuil.html"> accueil </a>
+		<a href="https://cdaviden-iut90.github.io/Ankama/SAE%2006/SAE_accueil.html"> accueil </a>
 		<a href="_.html"> menu </a>
 		<a href="_.html"> menu </a>
 		<a href="_.html"> menu </a>
