--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     </head>
     <body>
         Ankama est une société française spécialisée dans le domaine de la création numérique et artistique.
-
+        page d'accueil: https://cdaviden-iut90.github.io/Ankama/SAE_acceuil.html
     </body>
 </html>
